about page and some minor updates & fixes

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -9,13 +9,40 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
+		<div id="about-screen" style="display:none;">
+			<div id="about-titlebar">
+				<h1>r/GTA_Cruises Extension</h1>
+				<span id="about-close" title="Close About Screen">Close</span>
+			</div>
+			<div id="about-wrap">
+				<div id="about-section">
+					<h2>Options</h2>
+					<ul>
+						<li id="edit-options-link">Edit options</li>
+					</ul>
+				</div>
+				<div id="about-section">
+					<h2>Credits</h2>
+					<dl>
+						<dt><a href="https://github.com/JustinHowe">Syntax</a></dt>
+						<dd>Original Events Script</dd>
+						<dt><a href="https://github.com/Yogensia">Yogensia</a></dt>
+						<dd>UI, Optimization &amp;<br />Chrome Extension</dd>
+						<dt><a href="https://github.com/qlimax5000">qlimax5000</a></dt>
+						<dd>Additional Fixes</dd>
+						<dt><a href="https://www.reddit.com/user/Johninatoooor">Johninatoooor</a></dt>
+						<dd>Additional Fixes</dd>
+					</dl>
+				</div>
+			</div>
+		</div>
 		<div id="titlebar">
 			<div id="titlebar-inner">
 				<ul id="titlebar-actions">
 					<li id="titlebar-reload" title="Clear Cache &amp; Reload"></li>
 					<li id="titlebar-add-event" title="Create Event"></li>
 					<li id="titlebar-notifications" title="Toggle Notifications"></li>
-					<li id="titlebar-menu" title="Menu"></li>
+					<li id="titlebar-about" title="About"></li>
 				</ul>
 			</div>
 		</div>
