--- a/extension/popup.html
+++ b/extension/popup.html
@@ -15,13 +15,13 @@
 				<span id="about-close" title="Close About Screen">Close</span>
 			</div>
 			<div id="about-wrap">
-				<div id="about-section">
+				<div class="about-section">
 					<h2>Options</h2>
 					<ul>
 						<li id="edit-options-link">Edit options</li>
 					</ul>
 				</div>
-				<div id="about-section">
+				<div class="about-section">
 					<h2>Credits</h2>
 					<dl>
 						<dt><a href="https://github.com/JustinHowe">Syntax</a></dt>
