new cache method using chrome.storage.local
Hopefully this fixes the extension becoming unresponsive after long
periods of time...

--- a/extension/background.html
+++ b/extension/background.html
@@ -8,7 +8,7 @@
 		</div>
 		<script src="js/background.js"></script>
 		<script src="js/jquery.min.js"></script>
-		<script src="js/jsoncache-0.1.0.min.js"></script>
+		<script src="js/eventCache.js"></script>
 		<script src="js/jstz.min.js"></script>
 		<script src="js/notifications.js"></script>
 		<script src="js/events.js"></script>
