--- a/extension/popup.html
+++ b/extension/popup.html
@@ -52,7 +52,7 @@
 		</div>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/spin.min.js"></script>
-		<script src="js/jsoncache-0.1.0.min.js"></script>
+		<script src="js/eventCache.js"></script>
 		<script src="js/frontend.js"></script>
 		<script src="js/jstz.min.js"></script>
 		<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
