add support for "new event" notifications

--- a/extension/options.html
+++ b/extension/options.html
@@ -37,6 +37,9 @@
 			</label><br />
 			<label>
 				<input type="checkbox" id="notificationsDisable15min"> Disable 15 minute notifications
+			</label><br />
+			<label>
+				<input type="checkbox" id="notificationsDisableNew"> Disable New Event notifications
 			</label><br /><br />
 
 			<button id="save">Save</button>
