rebranding r/GTAV_Cruises to PCCruises

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 	<html>
 		<head>
-		<title>r/GTAV_Cruises Extension</title>
+		<title>PCCruises Chrome Extension</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700">
 		<link rel="stylesheet" href="css/normalize.css">
@@ -11,7 +11,7 @@
 	<body>
 		<div id="about-screen" style="display:none;">
 			<div id="about-titlebar">
-				<h1>r/GTA_Cruises Extension</h1>
+				<h1>PCCruises Chrome Extension</h1>
 				<span id="about-close" title="Close About Screen">Close</span>
 			</div>
 			<div id="about-wrap">
