--- a/extension/options.html
+++ b/extension/options.html
@@ -1,7 +1,7 @@
 <!doctype html>
 	<html>
 		<head>
-		<title>r/GTAV_Cruises Extension Options</title>
+		<title>PCCruises Extension Options</title>
 		<style>
 			body {
 				margin: 0;
