update links to 'main.js' in html files

--- a/extension/background.html
+++ b/extension/background.html
@@ -11,6 +11,6 @@
 		<script src="js/eventCache.js"></script>
 		<script src="js/jstz.min.js"></script>
 		<script src="js/notifications.js"></script>
-		<script src="js/events.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
