--- a/extension/popup.html
+++ b/extension/popup.html
@@ -57,6 +57,6 @@
 		<script src="js/jstz.min.js"></script>
 		<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 		<script src="js/notifications.js"></script>
-		<script src="js/events.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
