add per game notification support

--- a/extension/options.html
+++ b/extension/options.html
@@ -40,6 +40,12 @@
 			</label><br />
 			<label>
 				<input type="checkbox" id="notificationsDisableNew"> Disable New Event notifications
+			</label><br />
+			<label>
+				<input type="checkbox" id="notificationsDisableGTAV"> Disable GTAV Event notifications
+			</label><br />
+			<label>
+				<input type="checkbox" id="notificationsDisableForza"> Disable Forza Event notifications
 			</label><br /><br />
 
 			<button id="save">Save</button>
